# small-mp4-rs

./: .SRCINFO  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  build-all.sh  build-macos-dmg.sh  pro.md  run_tests.sh  small-mp4.desktop
.cargo/: config.toml
debian/: changelog  control  copyright  rules
docs/: README-en.md  README-ja.md  README-ko.md
src/: main.rs
src/cli/: hardware_cli.rs  mod.rs
src/compression/: engine.rs  estimator.rs  metadata.rs  mod.rs  size_presets.rs
src/compression/hardware/: amd.rs  cuda.rs  detection.rs  fallback.rs  intel.rs  mod.rs  platform.rs
src/gui/: app.rs  mod.rs  state.rs  utils.rs
src/gui/components/: drop_zone.rs  mod.rs  preview_panel.rs  progress_bar.rs  size_slider.rs
src/utils/: mod.rs  system_info.rs
test_videos/: README.md  generate_test_videos.sh
tests/: cli_tests.rs  compression_tests.rs
